added comment for the link

--- a/02-Links/index.html
+++ b/02-Links/index.html
@@ -21,6 +21,7 @@
                 <a href="../01-structural-elements/index.html">Ex 1</a>
                 <a href="mailto:jordan.harrison@qa.com">MAIL</a>
                 <br>
+                <!-- # basically means id = -->
                 <a href="#p1">P1</a>
                 <a href="#p2">P2</a>
                 <a href="#p3">P3</a>
