--- a/04-Lists-Tables/index.html
+++ b/04-Lists-Tables/index.html
@@ -50,6 +50,11 @@
                     <td>Weapon</td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td>This is a footer</td>
+                </tr>
+            </tfoot>
         </table>
     </section>
 </body>
